# brics

./: Cargo.toml  README.md
client/: Cargo.toml
client/examples/: app.rs  test.rs
client/examples/basic/: logic.rs  main.rs  renderer.rs  visual.rs
client/examples/basic/shaders/: light.frag  light.vert  material.frag  material.vert  shader.frag  shader.vert  shadow.vert
client/examples/shaders/: shader.frag  shader.vert  shader.vert.spv
client/shaders/: shader.vert
client/src/: application.rs  camera.rs  graphics.rs  input.rs  layout.rs  lib.rs  logic.rs  main.rs  object.rs  object_factory.rs  pipeline.rs  render_pass.rs  renderer.rs  resource.rs  scene.rs  shader.rs  shader_compiler.rs  uniform.rs
client/src/binding/: buffer.rs  mod.rs  sampler.rs  storage.rs  texture.rs  uniform.rs
client/src/binding/types/: camera.rs  mod.rs  object.rs
client/src/handle/: camera.rs  light.rs  mod.rs  object.rs  sampler.rs  shape.rs  texture.rs
client/src/shaders/: shader.frag  shader.frag.spirv  shader.frag.spv  shader.vert  shader.vert.spirv
examples/basic/: application.rs  controller.rs  logic.rs  main.rs  script.rs  vertex.rs  visual.rs
examples/basic/shaders/: material.frag  material.vert  shadow.vert
src/: application.rs  graphics.rs  lib.rs  pipeline.rs  profiler.rs  rcmut.rs  render_pass.rs  renderer.rs  run.rs  script.rs  visual.rs
src/binding/: mod.rs
src/handle/: camera.rs  light.rs  mod.rs  shape.rs
